commit 03a50d15fad1d8d6c28bcbdc508c2668f663fc69
Date:   Thu May 7 00:53:42 2015 +0300

    Refactored the Simple message format.

commit 25ab5d7e6c2fb5966a04707010c8c3fd8bb1bcc3
Date:   Wed May 6 16:33:07 2015 +0300

    Added MQL4/Python/OTMql427/ZmqChart.py to make a chart abstraction
    that uses zmq.

commit b3c408c7505cf9871782ba4c562ddc849588a9ad
Date:   Tue May 5 19:51:51 2015 +0300

    Documented that we are having problems with the receiving of messages.

commit 86ce2c3f676047edccb10081afa71e1ec628e56a
Date:   Sat May 2 14:46:19 2015 +0300

    Trying with pyzmq under OTMql4Py. Still having problems with
    crashing Mt4 on receive. For a demo expert, see
    MQL4/Experts/OTMql4/OTPyTestZmqEA.mq4

commit 6126dc3610e11e2b3b703e10783e0bc8c7e49147
Date:   Sat May 2 14:32:24 2015 +0300

    Moved MQL4/Include/OTMql4/OTZmqBarInfo.mqh to
    OTMql4LibMQL4/Include/OTMql4/OTBarInfo.mqh
    so it can be used by other projects.

commit 1193b5a63e27d0cfc2c693cf534f7104440a342c
Date:   Thu Apr 23 17:00:42 2015 +0300

    Refactored OTLibProcessCmd.mqh into OTLibMt4ProcessCmd.mqh
    and OTZmqProcessCmd.mqh to make it easier for people to reuse
    ProcessCmd with the OT additions, and to extend it to handle
    their own additions.

commit eaf9f462acecf460f088055d581148f0d4d37445
Date:   Wed Apr 22 14:22:37 2015 +0300

    Renamed  bin/OTZmqPublish.py to bin/OTZmqRequest.py
    to eliminate some confusion in the code. The
    socket to get information from Metatrader is a REQ/REP socket.

commit 21caab07061e75a856c6e06a0f7d21601cee71b2
Date:   Tue Apr 21 23:14:13 2015 +0300

    Added an Expert to send and receive over ZeroMQ
    MQL4/Experts/OTMql4/OTZmqCmdEA.mq4
    
    It's not fully functional yet, but checked in to work on.

commit 8876b5971efddf92970ed8e14c9e70d4265f95ce
Date:   Mon Apr 20 08:43:24 2015 +0300

    Started documening using pyzmq for testing in 05PyZmq.txt.

commit e96a6465cf722542cc3081db504dae0ed1e41928
Date:   Fri Apr 17 22:29:27 2015 +0300
