@@ -90,7 +90,7 @@ string zOTZmqProcessCmd(string uMess) {
 	uRetval="error|"+uMsg;
     }
 
-    return (uMark+"|"+uRetval);
+    return (uRetval);
 }
 
 string uProcessCmdZmq (string uCmd, string uChartId, string uIgnore, string uArg1, string uArg2, string uArg3, string uArg4, string uArg5) {
